# ParallelProgCUDA

./: README.md
Report/: kernelImagePricessing_Tech_Report.docx  kernelImageProcessing.pptx
imageProcessingCUDA_thrust/: main.cu
kernelImageProcessingCUDA_PinnedMem/: main.cu
kernelImageProcessingCUDA_S/: CMakeLists.txt  main.cu
kernelImageProcessingCUDA_Streams/: main.cu
kernelImageProcessingSEQ/: CMakeLists.txt  main.cpp
